--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link href="/src/global.css" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <meta
+      name="description"
+      content="DCODE is a student-led initiative helping college students dive into open source through structured contribution cycles, mentorship, and real project work."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dcode.codes/" />
+    <meta property="og:title" content="DCODE" />
+    <meta
+      property="og:description"
+      content="DCODE helps students become long-term open source contributors and future maintainers through mentorship and hands-on experience."
+    />
+    <meta
+      property="og:image"
+      content="https://dcode.codes/images/preview-image.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://dcode.codes/" />
+    <meta property="twitter:title" content="DCODE" />
+    <meta
+      property="twitter:description"
+      content="A student-led initiative empowering the next generation of open source maintainers through structured contributions and mentorship."
+    />
+    <meta
+      property="twitter:image"
+      content="https://dcode.codes/images/preview-image.png"
+    />
+    <link href="/src/global.css" rel="stylesheet" />
     <title>DCODE</title>
   </head>
   <body>
