--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="icon" type="image/png" href="/images/preview-image.png" />
+    <link rel="icon" type="image/png" href="/images/d-favicon2.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
@@ -28,7 +28,7 @@
     />
     <meta
       property="og:image"
-      content="https://dcode.codes/images/preview-image.png"
+      content="https://dcode.codes/images/d-favicon2.ico"
     />
 
     <!-- Twitter -->
@@ -41,7 +41,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://dcode.codes/images/preview-image.png"
+      content="https://dcode.codes/images/d-favicon2.ico"
     />
     <link href="/src/global.css" rel="stylesheet" />
     <title>DCODE</title>
